--- a/index.html
+++ b/index.html
@@ -6,11 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
-    <title>My Project</title>
+    <title>Animated Navigation</title>
 </head>
 <body>
-    <h1>Project starter</h1>
+   <nav class="active" id="nav">
+       <ul>
+           <li><a href="#">Home</a></li>
+           <li><a href="#">Work</a></li>
+           <li><a href="#">About</a></li>
+           <li><a href="#">Contact</a></li>
+       </ul>
+       <button class="icon" id="toggle">
+           <div class="line line1"></div>
+           <div class="line line2"></div>
+       </button>
+   </nav>
 
     <script src="script.js"></script>
+
+    <!-- Dribble link: https://dribble.com/shots/2427219-Header-Navigation-Day-053-dailyui -->
 </body>
 </html>
